Removes bullets from reg notices and fixes spacing.

--- a/myuw_mobile/static/css/mobile.less
+++ b/myuw_mobile/static/css/mobile.less
@@ -299,6 +299,16 @@ body {
             
     }
     
+    // registration card
+    
+    #RegStatusCard {
+        
+        .reg-notice-list { list-style: none; padding: 0; 
+            
+            li { margin-bottom: 1em; }
+        }
+    }
+    
     // course cards (custom style)
     
     #CourseCard {
